--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -12,7 +12,7 @@ swiper-item image{
   border-top: 1rpx solid #efefef;
   border-left: 1rpx solid #efefef;
 }
-.nineContainer view{
+.nineContainer .nineItem{
   width: 33.3%;
   height: 180rpx;
   display: flex;
